--- a/meeting-record/20210101.md
+++ b/meeting-record/20210101.md
@@ -20,3 +20,7 @@
 ### 참조
 - [iOS floating action button](https://www.warmodroid.xyz/tutorial/how-to-design-the-floating-action-button-in-ios-swift/)
 
+### 다음주까지 할 일
+- 범수: api 서버 문서 만들기
+- 재욱: web 디자인 (+ admin page)
+- 산 / 예은: chart API 다루는 방법 알아오기, figma 디자인 옮기기, camera view 사용법, time stamp 사용법, component 고정 
