--- a/meeting-record/20210117.md
+++ b/meeting-record/20210117.md
@@ -4,6 +4,9 @@
 - 비밀번호 찾기 누르면 정보 입력할 수 있고, 이메일로 임시 비밀번호 발급
 - 로그인 후에 설정에서 비밀번호 바꾸기
 
+#### 로그인 페이지
+- 아이디 없애고 이메일만 받기
+
 #### 이번주 한 일
 - 오범수
   - API 문서 완성
